# spreadra

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeLists_simple.txt  DEVELOPMENT_PLAN.md  DSP_ALGORITHMS.md  LICENSE  Makefile  README.md  UI_IMPROVEMENTS.md  VERSION_SYSTEM.md  bg3.psd  build_universal.sh  build_with_version.sh  compile_commands.json  create_installers.sh  increment_version.sh  test_build.cpp  update_version.sh
.cache/clangd/index/: FFTEngine.cpp.7FD9728621EF7EF8.idx  FFTEngine.h.E96DD0D832E55E9F.idx  FilterBank.cpp.F53C5DAD63652D07.idx  FilterBank.h.67F5694039C1996B.idx  ParameterManager.h.E3EA71DBA92BA950.idx  PitchShifter.cpp.36D7C39A538B8AC6.idx  PitchShifter.h.A160604CA4B51A3E.idx  ReverbAlgorithm.cpp.2AD9A7592733C2EC.idx  ReverbAlgorithm.h.0C021E2B30F890EA.idx  ReverbEditor.cpp.84B328F2D83A687A.idx  ReverbEditor.h.C32BE1EE21DD8895.idx  ReverbEngine.cpp.72F8C8AC09AB8AC2.idx  ReverbEngine.h.CFA6FEAC691528EA.idx  ReverbProcessor.cpp.8568EB05CA7821E6.idx  ReverbProcessor.h.58F48B52C57DEC6A.idx  Version.h.F6AFA690B53701FC.idx
Builds_Universal/JUCE/: JUCEExportConfig.cmake
Builds_Universal/JUCE/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake
Installers/: README.md
Installers/Windows/: create_installer.bat  license.txt  reverbix_installer.nsi  spreadra_installer.nsi
Installers/macOS/: create_universal_installer.sh
design_src/: UI.psd
src/core/: ParameterManager.h  ReverbProcessor.cpp  ReverbProcessor.h  SpreadraProcessor.cpp  SpreadraProcessor.h  Version.h.in
src/dsp/: DelayEngine.cpp  DelayEngine.h  FFTEngine.cpp  FFTEngine.h  FilterBank.cpp  FilterBank.h  PitchShifter.cpp  PitchShifter.h  ReverbAlgorithm.cpp  ReverbAlgorithm.h  ReverbEngine.cpp  ReverbEngine.h
src/gui/: ReverbEditor.cpp  ReverbEditor.h  SpreadraEditor.cpp  SpreadraEditor.h
